FEATURE-open-graph - done

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,11 @@
     <!-- Allow installing the app to the homescreen -->
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta property="og:title" content="Сайт группы ИНАЧЕ">
+    <meta property="og:description" content="Сайт группы ИНАЧЕ">
+    <meta property="og:image" content="http://pp.userapi.com/c417728/v417728250/569e/uv1Khgbi4PY.jpg">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="http://inache.band">
     <title>Inache Account</title>
   </head>
   <body>
